# Race-Simulator

./: CMakeLists.txt  README.md  main.cpp
Enums/: CMakeLists.txt  EAddTransport.h  ERaceTypes.h  ETransports.h
Functions/: CMakeLists.txt  add_transport_handler.cpp  add_transport_handler.h  menus.cpp  menus.h  race_case.cpp  race_case.h  race_handler.cpp  race_handler.h  select_transport.cpp  select_transport.h
Races/: AirRace.cpp  AirRace.h  CMakeLists.txt  LandRace.cpp  LandRace.h  MixedRace.cpp  MixedRace.h  Race.cpp  Race.h
Transports/: CMakeLists.txt  Transport.cpp  Transport.h
Transports/Air/: AirTransport.cpp  AirTransport.h  Broomstick.cpp  Broomstick.h  CMakeLists.txt  Eagle.cpp  Eagle.h  MagicCarpet.cpp  MagicCarpet.h
Transports/Land/: AllTerrainBoots.cpp  AllTerrainBoots.h  CMakeLists.txt  Camel.cpp  Camel.h  Centaur.cpp  Centaur.h  LandTransport.cpp  LandTransport.h  SpeedsterCamel.cpp  SpeedsterCamel.h
